comp/repo/optimize/tests/errors/07_traitbound.lark
(* Error test 07 — Trait bound violation: unconstrained type variable passed to show
   Expected: TraitBoundError — 'show' requires Show, but the type variable has no instance *)

module TraitBound

fn bad_show(x) = show(x)
